<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cast Videos</string>
    <string name="app_id">YOUR_APP_ID</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cast_app_name">GoogleCastPlayer</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="list_of_videos">Select a Video Clip</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="ok">OK</string>
    <string name="no_device">(No Device Selected)</string>
    <string name="error">Error</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="session_reconnection_attempt">Attempting to recover previous session&#8230;</string>

    <!-- Error messages -->
    <string name="failed_to_set_volume">Failed to set the volume</string>
    <string name="failed_to_launch_app">Failed to lauch application</string>
    <string name="failed_to_set_mute">Failed to adjust the volume mute</string>
    <string name="failed_to_find_app">The application you are trying to launch is not availabled on your chromecast device</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="failed_to_seek">Failed to seek to the specified position on the remote device</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="connection_temp_lost">Connection to the cast device is temporarily lost</string>
    <string name="connection_recovered">Connection to the cast device is recovered</string>
    <string name="connection_lost_retry">Connection to the cast device has been temporarily lost. Application is trying to reover connection, please try again later</string>
    <string name="connection_lost">No connection to the cast device exist</string>
    <string name="failed_to_perfrom_action">Sorry, ran into issues perfroming the task you wanted</string>
    <string name="oops">Oops</string>

    <!-- Preferences -->
    <string name="prefs_header_application">Application Behavior</string>
    <string name="prefs_header_application_summary">Control how the application behaves on the TV</string>
    <string name="prefs_destroy_app_on_disconnect">Application Termination</string>
    <string name="prefs_destroy_app_on_disconnect_on">Terminate the application on TV upon disconnection</string>
    <string name="prefs_destroy_app_on_disconnect_off">Let the application continue running on TV when you disconnect</string>
    <string name="prefs_volume_title">Volume Assignment</string>
    <string name="prefs_volume_title_summary">Controls %1$s</string>
    <string name="prefs_volume_dialog_title">Volume Assignment</string>
    <string name="prefs_volume_default">device</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Tabs -->
    <string name="tab_videos_title">Videos</string>
    <string name="tab_music_title">Songs</string>
    <string name="tab_photos_title">Photos</string>

    <!-- One-time help screen -->
    <string name="showcase_simple_title">Touch to cast videos, music  or photos to your TV</string>
    <string name="showcase_simple_message"></string>

</resources>